# KineToxin

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  agent-instructions.md  config.json  misc.txt  requirements.md  todo.md
src/: main.cpp
src/core/surveillance/: location_tracker.cpp  location_tracker.h
src/evasion/: vm_detection.cpp  vm_detection.h
src/utils/: config.cpp  config.h  crypto.cpp  crypto.h  error.cpp  error.h  logger.cpp  logger.h
tests/: README.md  test_config.cpp  test_crypto.cpp  test_error.cpp  test_logger.cpp  test_main.cpp  test_vm_detection.cpp
